<resources>
    <string name="app_name">Spectrum</string>
    <string name="log_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="auth_code">인증번호</string>
    <string name="enter_auth_code">이메일로 전송된 숫자 6자리를 입력해 주세요</string>
    <string name="enter_new_password">변경할 비밀번호를 입력해 주세요</string>
    <string name="enter_new_password_again">비밀번호를 한 번 더 입력해 주세요</string>
    <string name="id_or_email">아이디(이메일)</string>
    <string name="enter_email">이메일 주소를 입력해 주세요</string>
    <string name="next">다음</string>
    <string name="done">완료</string>
    <string name="agree">동의</string>
    <string name="save">저장</string>
    <string name="password">비밀번호</string>
    <string name="enter_password">비밀번호를 입력해 주세요</string>
    <string name="enter_password_again">비밀번호를 한 번 더 입력해 주세요</string>
    <string name="overlap_check">중복확인</string>
    <string name="nickname">닉네임</string>
    <string name="enter_nickname">닉네임을 입력해주세요</string>
    <string name="show_us_your_spec">당신의 스펙트럼이 궁금해요!</string>
    <string name="skip"><u>건너뛰기</u></string>
    <string name="specs_can_always_be_edited">스펙은 마이페이지에서 언제든지 수정 가능합니다.</string>
    <string name="age">연령</string>
    <string name="select_age">연령 선택</string>
    <string name="age_unit">세</string>
    <string name="sex">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="job_group">직군</string>
    <string name="select_your_job_group">관심 직군을 선택해 주세요</string>
    <string name="academic_background">학력 사항</string>
    <string name="work_histories">경력 사항</string>
    <string name="certificates_and_languages">자격/어학 사항</string>
    <string name="other_specs">기타 스펙</string>
    <string name="specs_placeholder">공모전, 프로젝트 등 자유롭게 적어주세요</string>
    <string name="select_job_group">직군 선택</string>
    <string name="select_group_of_your_specs">회원님 스펙의 직군을 선택해주세요</string>
    <string name="school_type">학교 구분</string>
    <string name="graduation_status">졸업 여부</string>
    <string name="name_of_school">학교명 (선택)</string>
    <string name="major">전공</string>
    <string name="grades">학점</string>
    <string name="delete">삭제</string>
    <string name="experiences">경력 사항</string>
    <string name="name_of_company">기업명 (선택)</string>
    <string name="duty">직무</string>
    <string name="position">직급</string>
    <string name="period">기간</string>
    <string name="name_of_certification_or_exam">자격명 및 시험명</string>
    <string name="score_or_grade">점수 및 등급</string>
    <string name="confirm">확인</string>
    <string name="home">홈</string>
    <string name="company">기업</string>
    <string name="notification">알림</string>
    <string name="my_page">마이페이지</string>
    <string name="search_hint">관심 분야의 스펙이나 기업을 찾아보세요</string>
    <string name="hottest_spectrums">요즘 핫한 스펙트럼</string>
    <string name="latest_specturms">최근 스펙 이야기</string>
    <string name="see_accepted_only">합격후기만 보기</string>
    <string name="see_accepted_spec_only">합격스펙만 보기</string>
    <string name="recent_keywords">최근에 찾은 키워드</string>
    <string name="delete_all">전체삭제</string>
    <string name="recently_seen">최근에 봤어요</string>
    <string name="my_companies_of_interest">내가 관심 있는 기업</string>
    <string name="companies_of_peoples_interest">다른 사람들이 보고 있어요</string>
    <string name="see_more">더 보기</string>
    <string name="select_your_job_group_of_interest">빠른 스펙 비교를 위해<br/>\n회원님이 관심 있는 직군을 선택해주세요.</string>
    <string name="maximum_two_selection">(최대 2개 선택 가능)</string>
    <string name="maximum_three_selection">(최대 3개 선택 가능)</string>
    <string name="start_date">입사일</string>
    <string name="end_date">퇴사일</string>
    <string name="spec_story">스펙 이야기</string>
    <string name="top_five_responses">스펙트럼의 TOP5 반응</string>
    <string name="no_response_yet">아직 아무도 의견을 남기지 않았습니다<br/>\n스펙 항목별로 의견을 남겨보세요!</string>
    <string name="title">제목</string>
    <string name="my_specs">나의 스펙</string>
    <string name="spec_list">스펙목록</string>
    <string name="select_spec">스펙 선택</string>
    <string name="type_of_spec">스펙 종류</string>
    <string name="free_text_hint">현재 스펙과 관련하여 고민이나 후기를 적어주세요</string>
    <string name="write_post">글쓰기</string>
    <string name="edit_post">글수정</string>
    <string name="search">검색</string>
    <string name="add">추가</string>
    <string name="you_can_edit_specs_later">스펙 선택 후 추가 수정 가능합니다</string>
    <string name="edit_spec">스펙 수정</string>
    <string name="create_spec">스펙 등록</string>
    <string name="edit_spec_message">연령, 성별, 직군은 필수입력항목입니다</string>
    <string name="company_info">기업정보</string>
    <string name="overwrite_changes_to_current_spec">수정 사항을 나의 기존 스펙에 반영</string>
    <string name="register_to_favorite_companies">관심기업 등록</string>
    <string name="spec_analysis">스펙트럼 분석</string>
    <string name="see_more_specs_of_this_company">이 기업의 또 다른<br/>\n스펙트럼을 만나보세요</string>
    <string name="leave_responses">의견 남기기</string>
    <string name="see_spec">스펙 둘러보기</string>
    <string name="add_spec">스펙 추가하기</string>
    <string name="all">전체</string>
    <string name="add_your_spec_to_create_post">스펙 추가를 통해<br/>\n고민 글, 취업 후기 작성이 가능합니다.</string>
    <string name="add_to_interest_to_see_details">관심기업 등록을 통해<br/>\n이 기업을 준비하고 있거나 합격한<br/>\n스펙 및 분석 내용을 살펴보실 수 있습니다.</string>
    <string name="spec_submission_notice">이 스펙은 관심 등록한 기업의 스펙 분석 데이터로 사용됩니다.<br/>\n등록을 통해 다른 사용자들과 스펙을 비교해보세요!</string>
    <string name="did_you_make_it">혹시 기업에 합격하셨나요?</string>
    <string name="activity_info">활동 정보</string>
    <string name="my_posts">작성한 글</string>
    <string name="my_evaluations">의견 낸 글</string>
    <string name="interests">관심 있어요</string>
    <string name="scraps">스크랩</string>
    <string name="company_of_interest"> 관심 기업</string>
    <string name="etc">기타</string>
    <string name="app_configurations">앱 설정</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="app_settings">앱 설정</string>
    <string name="log_out">로그아웃</string>
    <string name="sign_out">회원 탈퇴</string>
    <string name="no_items">없음</string>
    <string name="no_search_items">검색 결과가 없습니다</string>
    <string name="not_enough_comments">아직 의견이 부족합니다</string>
    <string name="not_enough_data_wait_please">아직 충분한 데이터가 쌓이지 않았습니다.<br/>\n조금만 기다려 주세요!</string>
    <string name="add_spec_to_see_spec_analysis">
        스펙 추가를 통해<br/>\n스펙 분석 데이터 열람이 가능합니다.
    </string>
</resources>