<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/company"
        android:enabled="true"
        android:icon="@drawable/icon_company"
        android:title="@string/company"
        app:showAsAction="ifRoom"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/icon_notification"
        android:title="@string/notification"
        app:showAsAction="ifRoom"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/my_page"
        android:enabled="true"
        android:icon="@drawable/icon_my"
        android:title="@string/my_page"
        app:showAsAction="ifRoom"
        android:menuCategory="secondary"/>
</menu>