<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:foreground="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/clearGray" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/id_or_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/id_or_email"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/enter_email"
            android:textColor="@android:color/black"
            android:textColorHint="@color/spectrumGray2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_or_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/id_check"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_medium"
            android:lines="1"
            android:text="@string/overlap_check"
            android:textColor="@color/spectrumBlue"
            android:textSize="14sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/id_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/id_edit_text"
            app:layout_constraintWidth_percent="0.25"
            app:rippleColor="@color/clearGray"
            app:strokeColor="@color/spectrumBlue"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pw_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_view">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pw1_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/enter_password"
            android:textColor="@android:color/black"
            android:textColorHint="@color/spectrumGray2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/pw1_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="PASSWORD MESSAGE"
            android:textColor="@android:color/holo_red_light"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pw1_edit_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pw2_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/enter_password_again"
            android:textColor="@android:color/black"
            android:textColorHint="@color/spectrumGray2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pw1_message" />

        <TextView
            android:id="@+id/pw2_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="PASSWORD MESSAGE"
            android:textColor="@android:color/holo_red_light"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw2_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/spectrumBlue"
        android:fontFamily="@font/roboto_medium"
        android:foreground="@android:color/transparent"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/spectrumBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/clearGray" />
</androidx.constraintlayout.widget.ConstraintLayout>