<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:foreground="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/clearGray" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.spectrum.spectrum.src.customs.CustomTextInputLayout
            android:id="@+id/password_1_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/spectrumGray2"
            android:hint="@string/enter_new_password"
            android:textColorHint="@color/spectrumGray2"
            app:errorTextColor="@android:color/holo_red_light"
            app:helperTextTextColor="@color/spectrumBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_underline"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/spectrumGray2"
                android:textSize="14sp" />

        </com.spectrum.spectrum.src.customs.CustomTextInputLayout>

        <com.spectrum.spectrum.src.customs.CustomTextInputLayout
            android:id="@+id/password_2_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/spectrumGray2"
            android:hint="@string/enter_new_password_again"
            android:textColorHint="@color/spectrumGray2"
            app:errorTextColor="@android:color/holo_red_light"
            app:helperTextTextColor="@color/spectrumBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_1_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_underline"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </com.spectrum.spectrum.src.customs.CustomTextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/button_blue_gray"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/clearGray" />

</androidx.constraintlayout.widget.ConstraintLayout>